crates/plotnik-tests/tests/05-typegen/recursion/error_row_capture_of_recursive_multi_node_def.txt
A = {
  (expression_statement)
  (statement_block (A))?
}

Q = (program (A)* @xs)
------------------ DIAGNOSTICS -------------------
error: one repeat of this `*` group doesn't match exactly one node, so there is no single node to bind per element
 --> query.ptk:6:14
  |
6 | Q = (program (A)* @xs)
  |              ^^^^
  |
help: add internal captures: `{(a) @a (b) @b}* @items`
